--- a/gb/24/7/13/n14290118.md
+++ b/gb/24/7/13/n14290118.md
@@ -85,7 +85,7 @@
 <p>川普在声明中说：“我感谢美国特勤局、所有执法部门对刚刚在宾州巴特勒枪击事件的迅速反应。最重要的是，我要向在集会中遇难者的家人、以及另一名重伤者的家人表示哀悼。</p>
 <p>“在我们国家发生这样的事情真是难以置信。</p>
 <p>“目前（我们）对枪手的信息一无所知，他已经死亡。我被一颗子弹击中，子弹穿透了我的右耳上部。我立即意识到出了问题，因为我听到了嗖嗖声、枪声，并立即感觉到子弹撕裂皮肤的痛感。我流了很多血，所以我当时就意识到发生了什么。上帝保佑美国！”</p>
-<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://d200ccn4ewjn2r.cloudfront.net/B1xpozeZh"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
+<p dir="ltr" lang="en">Here is the latest information from our investigation. We are grateful to the Secret Service team and our law enforcement partners for their swift action. Our thoughts go out to the families affected by this tragedy. <ahref="https://t.co/E8FazqtUVZ"></a><a href="https://dol9bue5bysdj.cloudfront.net/L2bpozeZv"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="E8FazqtUVZ</a></p>
 <p>— Anthony Guglielmi (@SecretSvcSpox) <ahref="https://twitter.com/SecretSvcSpox/status/1812288378596982908?ref_src=twsrc%5Etfw">July 14, 2024</a></p></blockquote>
 <h2>特勤局声明：枪手被击毙 造成1死3伤</h2>
 <p>美国特勤局通讯主管安东尼·古列尔米（Anthony Guglielmi）在美东时间晚9点发出声明称，枪手被特勤局击毙，造成1死3伤。</p>
@@ -164,7 +164,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290275.md#1">父亲遇袭 四子女发声明 川普：我永不投降</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290252.md#1">川普期待参加共和党大会 据报他已出院</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11208799.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇（5）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
